# reaper-mcp

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.bat  build_and_install.bat  build_and_run.bat  pyproject.toml
.github/workflows/: ci.yml
crates/dawmcp-audacity/: Cargo.toml
crates/dawmcp-audacity/src/: backend.rs  discovery.rs  lib.rs  pipe_client.rs
crates/dawmcp-core/: Cargo.toml
crates/dawmcp-core/src/: error.rs  lib.rs  traits.rs  types.rs
crates/dawmcp-reaper/: Cargo.toml
crates/dawmcp-reaper/src/: backend.rs  bridge_client.rs  discovery.rs  extra.rs  installer.rs  lib.rs
crates/dawmcp-server/: Cargo.toml
crates/dawmcp-server/src/: main.rs
docs/: ARCHITECTURE.md
lua/: reaper_bridge.lua
reaper_project/: default.RPP
src/reaper_mcp/: app.py  bridge_client.py  discovery.py  installer.py  server.py
src/reaper_mcp/tools/: __init__.py  actions.py  compose.py  fx.py  items.py  markers.py  midi.py  project.py  raw.py  render.py  status.py  tracks.py  transport.py  view.py
tests/: test_bridge_client.py  test_discovery.py  test_installer.py
