[workspace]
resolver = "2"
members = [
    "crates/dawmcp-core",
    "crates/dawmcp-server",
    "crates/dawmcp-reaper",
    "crates/dawmcp-audacity",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/vecnode/dawmcp"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "time", "fs", "sync"] }
async-trait = "0.1"
schemars = "1"
sysinfo = "0.33"
