[project]
name = "reaper-mcp"
version = "0.1.0"
description = "MCP server for driving a live REAPER DAW instance from Claude"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "psutil>=6.0.0",
]

[project.scripts]
reaper-mcp = "reaper_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reaper_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
